--- a/.gitconfig
+++ b/.gitconfig
@@ -24,3 +24,7 @@
 
 [credential]
 	helper = cache --timeout=31556952
+[http]
+	proxy = http://aproxy.corproot.net:8080
+[https]
+	proxy = http://aproxy.corproot.net:8080
