--- a/.gitconfig
+++ b/.gitconfig
@@ -23,10 +23,6 @@
   ui = auto
 
 [credential]
-	helper = cache --timeout=31556952
+	helper = store
 [core]
 	editor = vim
-[http]
-	proxy = http://aproxy.corproot.net:8080
-[https]
-	proxy = http://aproxy.corproot.net:8080
